@@ -10,8 +10,6 @@ COMMANDS
     http://wiki.neurohack.com/transcendence/trac/report/11?format=csv
     Set referrer that can be traced back to source
 -   Add a `whoami' command that prints owner and maintainer details
--   Add a 'tell' command, that will tell `nick' text when he is seen again
--   Add a 'seen' command that will inform on when 'nick' was last seen
 -   A 'note' command, that will add a todo (more or less)
 -   Add a [random] specifier to the page selector
 
@@ -35,5 +33,5 @@ INTERNAL
 -   When a user is repeatedly spamming commands, inform him that he should use a query window?
 -   Func search, remove any non, word chars from end of search term (such as ?)
 -   Add access control for Facts module and sub-commands
--   Remembber module. Mix of Seen and Tell
 -   Add a write function to Facts that writes the fact list to disk as html. No framework plz
+-   Test: are we actually being authed properly?
